--- a/UpSpace/UpSpace/Controller/LaunchesViewController/Cell/NextLaunchCell/NextLaunchCell.xib
+++ b/UpSpace/UpSpace/Controller/LaunchesViewController/Cell/NextLaunchCell/NextLaunchCell.xib
@@ -11,49 +11,75 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LaunchCell" rowHeight="78" id="JxV-1C-C5z" customClass="NextLaunchCell" customModule="UpSpace" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="LaunchCell" rowHeight="78" id="JxV-1C-C5z" customClass="NextLaunchCell" customModule="UpSpace" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JxV-1C-C5z" id="eCs-T0-bhb">
-                <rect key="frame" x="0.0" y="0.0" width="376" height="77.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="77.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eYC-a9-3Vt">
-                        <rect key="frame" x="20" y="17" width="44" height="43.5"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="43.5" id="f79-kK-39Y"/>
-                            <constraint firstAttribute="width" constant="44" id="sep-MH-Cv3"/>
-                        </constraints>
-                    </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="M13-Vw-shF">
-                        <rect key="frame" x="79" y="18.5" width="292" height="40.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NUi-kN-PTi">
+                        <rect key="frame" x="8" y="8" width="398" height="69.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Le1-zv-D9B">
-                                <rect key="frame" x="0.0" y="0.0" width="292" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SY8-EQ-KJv">
-                                <rect key="frame" x="0.0" y="22.5" width="292" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eYC-a9-3Vt">
+                                <rect key="frame" x="16" y="13" width="44" height="43.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43.5" id="f79-kK-39Y"/>
+                                    <constraint firstAttribute="width" constant="44" id="sep-MH-Cv3"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="M13-Vw-shF">
+                                <rect key="frame" x="75" y="14" width="287" height="41.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Le1-zv-D9B">
+                                        <rect key="frame" x="0.0" y="0.0" width="287" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SY8-EQ-KJv">
+                                        <rect key="frame" x="0.0" y="22.5" width="287" height="19"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="go" translatesAutoresizingMaskIntoConstraints="NO" id="ssh-7G-pny">
+                                <rect key="frame" x="370" y="25" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="2AU-N7-bxE"/>
+                                    <constraint firstAttribute="width" secondItem="ssh-7G-pny" secondAttribute="height" multiplier="1:1" id="YOx-3v-T0n"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" red="0.96471232175827026" green="0.9646943211555481" blue="0.96470648050308228" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="eYC-a9-3Vt" firstAttribute="centerY" secondItem="NUi-kN-PTi" secondAttribute="centerY" id="AKv-8O-2dt"/>
+                            <constraint firstAttribute="trailing" secondItem="ssh-7G-pny" secondAttribute="trailing" constant="8" id="KQ8-qt-IfV"/>
+                            <constraint firstItem="ssh-7G-pny" firstAttribute="leading" secondItem="M13-Vw-shF" secondAttribute="trailing" constant="8" id="aJo-dE-1hd"/>
+                            <constraint firstItem="ssh-7G-pny" firstAttribute="centerY" secondItem="NUi-kN-PTi" secondAttribute="centerY" id="fA6-3I-df9"/>
+                            <constraint firstItem="eYC-a9-3Vt" firstAttribute="leading" secondItem="NUi-kN-PTi" secondAttribute="leading" constant="16" id="nbL-cJ-nes"/>
+                            <constraint firstItem="M13-Vw-shF" firstAttribute="top" secondItem="NUi-kN-PTi" secondAttribute="top" constant="14" id="p0y-IF-KDe"/>
+                            <constraint firstItem="M13-Vw-shF" firstAttribute="centerY" secondItem="NUi-kN-PTi" secondAttribute="centerY" id="pTP-rK-qQf"/>
+                            <constraint firstItem="M13-Vw-shF" firstAttribute="leading" secondItem="eYC-a9-3Vt" secondAttribute="trailing" constant="15" id="sxb-0F-h3U"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="M13-Vw-shF" secondAttribute="trailing" constant="5" id="03x-Hn-OyQ"/>
-                    <constraint firstItem="M13-Vw-shF" firstAttribute="top" secondItem="eCs-T0-bhb" secondAttribute="top" constant="18.5" id="1IW-fI-nNA"/>
-                    <constraint firstItem="eYC-a9-3Vt" firstAttribute="leading" secondItem="eCs-T0-bhb" secondAttribute="leading" constant="20" id="1MO-bP-Tgd"/>
-                    <constraint firstItem="eYC-a9-3Vt" firstAttribute="centerY" secondItem="eCs-T0-bhb" secondAttribute="centerY" id="5u6-x0-rTS"/>
-                    <constraint firstItem="M13-Vw-shF" firstAttribute="leading" secondItem="eYC-a9-3Vt" secondAttribute="trailing" constant="15" id="djx-VU-jrW"/>
-                    <constraint firstItem="M13-Vw-shF" firstAttribute="centerY" secondItem="eCs-T0-bhb" secondAttribute="centerY" id="fWV-6L-Ojp"/>
+                    <constraint firstItem="NUi-kN-PTi" firstAttribute="top" secondItem="eCs-T0-bhb" secondAttribute="top" constant="8" id="J6A-4d-yad"/>
+                    <constraint firstItem="NUi-kN-PTi" firstAttribute="leading" secondItem="eCs-T0-bhb" secondAttribute="leading" constant="8" id="MQz-hc-qEf"/>
+                    <constraint firstAttribute="bottom" secondItem="NUi-kN-PTi" secondAttribute="bottom" id="hxy-8R-eqK"/>
+                    <constraint firstAttribute="trailing" secondItem="NUi-kN-PTi" secondAttribute="trailing" constant="8" id="mhB-qt-Yui"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="countryIconImageView" destination="eYC-a9-3Vt" id="zvb-B4-tf5"/>
                 <outlet property="dateLabel" destination="SY8-EQ-KJv" id="R77-nd-FLd"/>
@@ -62,4 +88,7 @@
             <point key="canvasLocation" x="444.92753623188412" y="75"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="go" width="25" height="25"/>
+    </resources>
 </document>
